gateway-bump-v0.3.0/simple-http/kubernetes-gateway-sample.yml
---
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-gateway-class
spec:
  controller: traefik.io/gateway-controller

---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - protocol: HTTP
      port: 8000
      routes:
        kind: HTTPRoute
        namespaces:
          from: Same
        selector:
          matchLabels:
            app: traefik

---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: http-app-1
  namespace: default
  labels:
    app: traefik
spec:
  hostnames:
    - "whoami"
  rules:
    - matches:
        - path:
            type: Exact
            value: /bare
      forwardTo:
        - serviceName: whoami
          port: 80
          weight: 1
